--- a/css/style.css
+++ b/css/style.css
@@ -10,22 +10,23 @@
     .navbar-fixed-top .navbar-header button:hover, .navbar-fixed-top .navbar-header button:focus {
       color: black; }
   .navbar-fixed-top .logo {
+    position: relative;
     padding-left: 0px;
     width: 130px;
     margin-top: -35px; }
     @media only screen and (min-width: 1024px) {
       .navbar-fixed-top .logo {
         padding-left: 40px;
-        width: 180px;
-        margin-top: -35px; } }
+        width: 200px;
+        margin-top: -50px; } }
 
 @media only screen and (min-width: 480px) {
   .navbar-fixed-top {
-    background-color: black; }
+    background-color: rgba(0, 0, 0, 0.6); }
     .navbar-fixed-top li a {
       padding-top: 20px;
       padding-right: 0px;
-      font-size: 13px;
+      font-size: 15px;
       font-style: normal;
       font-weight: bold;
       color: white !important; } }
@@ -41,6 +42,13 @@
       color: white; }
       .navbar-fixed-top .navbar-header button:hover {
         color: black; } }
+
+.navbar-fixed-top.navbar-expanded {
+  padding: 20px 0; }
+
+.navbar-fixed-top {
+  padding: 0;
+  transition: padding 0.5s; }
 
 /* Body /* */
 body, html {
