--- a/css/style.sass
+++ b/css/style.sass
@@ -140,7 +140,8 @@ section
     width: 100%
     height: 200px
     @media only screen and (min-width: 1024px)
-      height: 450px
+      height: 500px
+      margin-bottom: 20px
 
 #contact
   i
@@ -148,3 +149,14 @@ section
     transition-duration: 1s
     &:hover
       color: #B40D2A
+#donde_estamos
+  position: relative
+  width: 100%
+  min-width: auto
+  background-image: url('../img/_mapa_campus y facultades.jpg')
+  background-repeat: no-repeat
+  background-size: cover
+  background-position: center
+  height: 400px
+  @media only screen and (min-width: 1024px)
+    height: 700px
