--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+.navbar-nav .active a {
+  background-color: transparent !important;
+  color: lightyellow !important; }
+
 .navbar-fixed-top {
   background-color: rgba(0, 0, 0, 0.8);
   border: none; }
@@ -66,7 +70,7 @@ h3 {
 hr {
   margin: 30px auto;
   border-color: #B40D2A;
-  width: 200px; }
+  width: 230px; }
 
 header {
   position: relative;
@@ -81,11 +85,11 @@ header {
   header .header-content {
     position: relative;
     text-align: center;
-    padding: 70px 15px 100px;
+    padding: 100px 15px 70px;
     width: 100%; }
     @media only screen and (min-width: 1024px) {
       header .header-content {
-        padding: 250px 15px 100px; } }
+        padding: 230px 15px 80px; } }
     header .header-content .header-content-inner h1 {
       font-weight: 700;
       text-transform: uppercase;
@@ -98,7 +102,8 @@ header {
       margin-bottom: 50px; }
       @media only screen and (min-width: 1024px) {
         header .header-content .header-content-inner p {
-          margin-top: 100px; } }
+          margin-top: 100px;
+          font-size: 22px; } }
     header .header-content .header-content-inner a {
       background-color: #B40D2A;
       border: none;
@@ -159,3 +164,53 @@ section {
   @media only screen and (min-width: 1024px) {
     #donde_estamos {
       height: 700px; } }
+
+#homeHeading {
+  font-family: "Lato", sans-serif;
+  font-size: 50px; }
+  @media only screen and (min-width: 1024px) {
+    #homeHeading {
+      font-size: 70px; } }
+
+.carrousel div {
+  height: 231px;
+  line-height: 261px;
+  vertical-align: middle;
+  margin-bottom: 50px; }
+  .carrousel div img {
+    padding: 10%; }
+  .carrousel div .vertical {
+    padding-top: 40%; }
+
+@media only screen and (min-width: 1024px) {
+  .carrousel {
+    margin-bottom: 100px; }
+    .carrousel img {
+      padding: 10%;
+      width: 100%;
+      display: inline-block; }
+    .carrousel .vertical {
+      padding-top: 40%; }
+    .carrousel div {
+      height: 431px;
+      line-height: 461px;
+      vertical-align: middle; } }
+
+#slider {
+  padding-top: 40px;
+  background-color: #222;
+  color: white; }
+  #slider .prev, #slider .next {
+    position: absolute;
+    display: block !important;
+    cursor: pointer;
+    top: 40%; }
+  #slider .next {
+    left: 100%;
+    padding-left: 20px; }
+  #slider .prev {
+    right: 100%;
+    padding-right: 20px; }
+
+.desk {
+  margin-top: 40px; }
