--- a/css/style.sass
+++ b/css/style.sass
@@ -1,7 +1,13 @@
 // Navigation
 $titulo: #B40D2A
 $font-stack: 'Roboto', sans-serif
+$font-titulo: 'Lato', sans-serif
 
+.navbar-nav
+  .active
+    a
+      background-color: rgba(0,0,0,0) !important
+      color: lightyellow !important
 
 .navbar-fixed-top
   background-color: rgba(0,0,0, 0.8)
@@ -68,7 +74,7 @@ h3
 hr
   margin: 30px auto
   border-color: $titulo
-  width: 200px
+  width: 230px
 // Header
 
 header
@@ -84,10 +90,10 @@ header
   .header-content
     position: relative
     text-align: center
-    padding: 70px 15px 100px
+    padding: 100px 15px 70px
     width: 100%
     @media only screen and (min-width: 1024px)
-      padding: 250px 15px 100px
+      padding: 230px 15px 80px
     .header-content-inner
       h1
         font-weight: 700
@@ -102,6 +108,7 @@ header
         margin-bottom: 50px
         @media only screen and (min-width: 1024px)
           margin-top: 100px
+          font-size: 22px
       a
         background-color: #B40D2A
         border: none
@@ -160,3 +167,48 @@ section
   height: 400px
   @media only screen and (min-width: 1024px)
     height: 700px
+#homeHeading
+  font-family: $font-titulo
+  font-size: 50px
+  @media only screen and (min-width: 1024px)
+    font-size: 70px
+.carrousel
+  div
+    height: 231px
+    line-height: 261px
+    vertical-align: middle
+    margin-bottom: 50px
+    img
+      padding: 10%
+    .vertical
+      padding-top: 40%
+  @media only screen and (min-width: 1024px)
+    margin-bottom: 100px
+    img
+      padding: 10%
+      width: 100%
+      display: inline-block
+    .vertical
+      padding-top: 40%
+    div
+      height: 431px
+      line-height: 461px
+      vertical-align: middle
+
+#slider
+    padding-top: 40px
+    background-color: #222
+    color: white
+    .prev, .next
+      position: absolute
+      display: block !important
+      cursor: pointer
+      top: 40%
+    .next
+      left: 100%
+      padding-left: 20px
+    .prev
+      right: 100%
+      padding-right: 20px
+.desk
+  margin-top: 40px
